<resources>
    <string name="app_name">MuseoCajaGranada</string>
    <string name="title_activity_home">Inicio</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Poner aquí otra opción o quitarlo incluso.</string>
    <string name="title_activity_game_start">Nueva partida</string>

    <!--  BluetoothChat -->
    <string name="send">Send</string>
    <string name="not_connected">You are not connected to a device</string>
    <string name="bt_not_enabled_leaving">Bluetooth was not enabled. Leaving Bluetooth Chat.</string>
    <string name="title_connecting">connecting...</string>
    <string name="title_connected_to">connected: </string>
    <string name="title_not_connected">not connected</string>
    <!--  DeviceListActivity -->
    <string name="scanning">scanning for devices...</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>
    <!-- Options Menu -->
    <string name="connect">Connect a device</string>
    <string name="discoverable">Make discoverable</string>
    <string name="title_activity_map">MapActivity</string>

    <string name="error_camara">"Ha ocurrido un error con la cámara"</string>

    <string name="question1">Pregunta 1: ¿En qué año se produjo la invasión musulmana de la Península Ibérica?</string>
    <string name="q1_response1">A finales del año 611.</string>
    <string name="q1_response2">En la primera década del siglo VIII.</string>
    <string name="q1_response3">En el año 711.</string>
    <string name="q1_response">3</string>


    <string name="question2">Pregunta 2: ¿En qué capital andaluza fue promulgada la Constitución española de 1812?</string>
    <string name="q2_response1">Cádiz.</string>
    <string name="q2_response2">Sevilla.</string>
    <string name="q2_response3">Córdoba.</string>
    <string name="q2_response">1</string>


    <string-array name="question11_keys">
            <item>611</item>
            <item>1</item>
            <item>primer</item>
    </string-array>

    <string-array name="question12_keys">
                <item>siglo 8</item>
                <item>2</item>
                <item>segund</item>
    </string-array>

    <string-array name="question13_keys">
                <item>711</item>
                <item>3</item>
                <item>tercer</item>
    </string-array>

    <string-array name="question21_keys">
                <item>Cádiz</item>
                <item>1</item>
                <item>primer</item>
    </string-array>

    <string-array name="question22_keys">
                <item>Sevilla</item>
                <item>2</item>
                <item>segund</item>
    </string-array>

    <string-array name="question23_keys">
                <item>Córdoba</item>
                <item>3</item>
                <item>tercer</item>
    </string-array>

    <string-array name="question_back_key">
        <item>Atrás</item>
        <item>Volver</item>
        <item>Vuelve</item>
    </string-array>

    <string-array name="question_next_key">
        <item>Siguiente</item>
        <item>Paso</item>
        <item>Seguir</item>
        <item>Pasar</item>
    </string-array>




    <string name="question3">Encuentra el lugar donde se encuentra la biografía del autor de este cuadro. Pista: es un pintor del siglo XX. </string>


    <!-- NFC TAGS ID'S -->
    <string name="tag_nuria">A90669F4</string>
    <string name="tag_moya">3FA6B209</string>
    <string name="tag_juanlu">DFFD64EE</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
