<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.jlsuarezdiaz.museocajagranada.Question1Fragment">
    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:id="@+id/lfquestion1_1"
        android:layout_width="wrap_content"
        android:layout_height="120dp"
        android:background="@android:color/holo_blue_dark"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_q1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:foregroundGravity="center"
            android:gravity="center"
            android:text="@string/question1"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:textColor="@android:color/background_light" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lfquestion1_2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="120dp"
        android:background="@android:color/background_light"
        android:orientation="horizontal">

        <RadioGroup
            android:id="@+id/response_q1"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <RadioButton
                android:id="@+id/q1_response1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/q1_response1" />

            <RadioButton
                android:id="@+id/q1_response2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/q1_response2" />

            <RadioButton
                android:id="@+id/q1_response3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/q1_response3" />
        </RadioGroup>
    </LinearLayout>


</FrameLayout>
