<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal|center_vertical"
    tools:context="com.example.jlsuarezdiaz.museocajagranada.Question1Fragment">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:id="@+id/lfquestion2_1"
        android:layout_width="wrap_content"
        android:layout_height="120dp"
        android:background="@android:color/holo_blue_dark"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_q2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:foregroundGravity="center"
            android:gravity="center"
            android:text="@string/question2"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:textColor="@android:color/background_light" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lfquestion2_2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="120dp"
        android:background="@android:color/background_light"
        android:orientation="horizontal">

        <RadioGroup
            android:id="@+id/response_q2"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <RadioButton
                android:id="@+id/q2_response1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/q2_response1" />

            <RadioButton
                android:id="@+id/q2_response2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/q2_response2" />

            <RadioButton
                android:id="@+id/q2_response3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/q2_response3" />
        </RadioGroup>
    </LinearLayout>
</FrameLayout>
